# django-api-base

./: .gitignore  buildspec.yml  devenv.nix  pyproject.toml  treefmt.toml
.claude/: CLAUDE.md
apibase/: filters.py  serializers.py  views.py
apibase/graphql/: mixins.py  models.py
