[tool.poetry]
name = "apibase"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.9"
graphene-django = "^2.10.1"
django-cors-headers = "^3.3.0"
djangorestframework-filters = { git = "https://github.com/philipn/django-rest-framework-filters.git" }
django-filter = "^2.2.0"
djangorestframework = "^3.11.0"
gql = "^2.0.0"
django-channels-graphql-ws = "^0.7.4"
jaconv = "^0.3.4"
djangorestframework-csv = "^2.1.0"
factory-boy = "^3.2.1"
ulid-py = "^1.1.0"
urllib3 = "^1.26.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8-black = "^0.3.6"
flake8 = "^7.2.0"
pysen = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 119
multi_line_output = 3

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,W503,W504"
per-file-ignores = "web/costs/reports/__init__.py: F401"
exclude = "migrations"


[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 119
py_version = "py37"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]