[tool.poetry]
name = "apibase"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.9"
graphene-django = "^2.10.1"
django-cors-headers = "^3.3.0"
djangorestframework-filters = {git = "https://github.com/philipn/django-rest-framework-filters.git"}
django-filter = "^2.2.0"
djangorestframework = "^3.11.0"
gql = "^2.0.0"
django-channels-graphql-ws = "^0.7.4"
jaconv = "^0.3.4"
djangorestframework-csv = "^2.1.0"
factory-boy = "^3.2.1"
ulid-py = "^1.1.0"
urllib3 = "^1.26.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.9"
mypy = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py39"
exclude = [
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # Whitespace before ':' (black compatibility)
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"web/costs/reports/__init__.py" = ["F401"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["apibase"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
exclude = [
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    "venv",
]
